--- a/wp-content/themes/indonesiatraveller/assets/css/default.css
+++ b/wp-content/themes/indonesiatraveller/assets/css/default.css
@@ -8458,7 +8458,8 @@ body.admin-bar #header._fixed {
   content: ' ';
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 50%;
+  bottom: 0px;
   z-index: 2;
   background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.521446)), to(rgba(255, 255, 255, 0)));
   background: -o-linear-gradient(bottom, rgba(0, 0, 0, 0.521446) 0%, rgba(255, 255, 255, 0) 100%);
@@ -8506,6 +8507,11 @@ body.admin-bar #header._fixed {
 .post-item.-grid.-cover .post-item_text .meta-rating,
 .post-item.-grid.-cover .post-item_text .meta-category {
   color: #fff;
+}
+
+.post-item.-grid.-cover .post-item_text .meta-category a {
+  color: #daa02c;
+  font-weight: bold;
 }
 
 .post-item.-grid.-cover .post-item_more {
