--- a/wp-content/themes/indonesiatraveller/assets/sass/scss/default.scss
+++ b/wp-content/themes/indonesiatraveller/assets/sass/scss/default.scss
@@ -298,7 +298,8 @@ p {
                     content:' ';
                     position: absolute;
                     width:100%;
-                    height:100%;
+                    height:50%;
+                    bottom:0px;
                     z-index: 2;
                     background: -moz-linear-gradient(0deg, rgba(0,0,0,0.5214460784313726) 0%, rgba(255,255,255,0) 100%);
                     background: -webkit-linear-gradient(0deg, rgba(0,0,0,0.5214460784313726) 0%, rgba(255,255,255,0) 100%);
@@ -343,6 +344,11 @@ p {
                         .meta-rating,
                         .meta-category{
                             color:$white;
+                        }
+
+                        .meta-category a{
+                            color:#daa02c;
+                            font-weight: bold;
                         }
 
                     }
