--- a/wp-content/themes/indonesiatraveller/assets/sass/scss/parts/_responsive.scss
+++ b/wp-content/themes/indonesiatraveller/assets/sass/scss/parts/_responsive.scss
@@ -7,6 +7,15 @@
 
 }
 @media only screen and (max-width: 1024px) {
+    .page-hero_content.-light .hero-thumb img{
+        width:100%;
+    }
+    .page-hero{
+        padding:30px 0px;
+        .post-item_text{
+            padding:20px 0px;
+        }
+    }
 
 }
 
@@ -16,10 +25,19 @@
     .hide-mobile{ display: none; }
 }
 @media screen and (max-width: 1024px) and (min-width: 960px) {
+    .post-items .col:last-child{
+        display: none !important;
+    }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (max-width: 960px) { // 768
+    .page-hero{
+        padding:0px;
+        .post-item_text{
+            padding:20px 0px;
+        }
+    }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
@@ -32,6 +50,126 @@
             }
         }
     }
+
+
+
+    .wpe-block{
+        &.section-hero{
+            padding:20px 0px;
+        }
+    }
+
+    .post-item.-list .post-item_text h1 {
+        font-size: 16px;
+    }
+    .post-item {
+        margin-bottom: 15px;
+    }
+
+    .post-item_more,
+    .post-item_author,
+    .post-item_action{
+        display: none;
+    }
+
+    .post-item.-grid .post-item_text h1,
+    .post-item.-hero .post-item_text h1 {
+        font-size: 16px;
+    }
+
+    .post-item_thumb {
+        height: 150px;
+    }
+    .post-item.-grid{
+        min-height: auto;
+    }
+    .post-item.-grid.-cover{
+        min-height: 350px;
+    }
+
+    .post{
+        &-item{
+            // layout
+            &.-grid{
+                position:relative;
+                background-color: $white;
+
+                &::after{
+                    position: absolute;
+                    content: ' ';
+                    left: 5px;
+                    right: 5px;
+                    width: calc(100% - 10px);
+                    height: 100%;
+                    bottom: -5px;
+                    border: 1px solid #ddd;
+                    z-index: -1;
+                    background: $white;
+                }
+
+
+                &:hover{
+                    .post-item_thumb{
+                        img{
+                            height: 105%;
+                        }
+                    }
+                }
+
+                .post-item{
+
+                    &_thumb{
+                        img{
+                            width:100%;
+                            height:100%;
+                            object-fit:cover;
+                            object-position:center;
+                            transition: 0.5s all ease;
+                        }
+                    }
+                    &_text{
+                        h1{
+                            font-size:16px;
+                        }
+                    }
+
+                    &_excerpt{
+                    }
+                }
+
+
+                .post-item{
+                    &_thumb{
+                        width:30%;
+                        right:0;
+                        position:absolute;
+                    }
+                    &_text{
+                        float:left;
+                        width:calc(70% - 10px);
+                        // vertical center flex
+                        display: flex;
+                        flex-direction: column;
+                        flex-wrap: nowrap;
+                        justify-content: center;
+                        height: 100%;
+                    }
+
+                }
+
+            &.-cover{
+                .post-item_text{
+                    height: auto;
+                    width:100%;
+                }
+            }
+
+
+            }
+        }
+    }
+
+
 
 }
 
