--- a/wp-content/themes/indonesiatraveller/assets/css/default.css
+++ b/wp-content/themes/indonesiatraveller/assets/css/default.css
@@ -7744,7 +7744,7 @@ p {
   font-size: 19px;
   font-weight: 400;
   letter-spacing: 0.45px;
-  margin-right: 25px;
+  margin-right: 0px;
   overflow-wrap: break-word;
   -webkit-text-size-adjust: 100%;
      -moz-text-size-adjust: 100%;
@@ -8630,7 +8630,7 @@ body.admin-bar #header._fixed {
   position: relative;
   margin-bottom: 30px;
   min-height: 400px;
-  padding: 100px 0px 100px 0px;
+  padding: 0px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -8815,6 +8815,10 @@ body.admin-bar #header._fixed {
   text-transform: uppercase;
 }
 
+.page-hero_content .post-item_text {
+  padding: 20px 0px;
+}
+
 .wpe-block {
   position: relative;
   padding: 50px 0px;
@@ -8907,7 +8911,8 @@ body.admin-bar #header._fixed {
   }
   .post-item_more,
   .post-item_author,
-  .post-item_action {
+  .post-item_action,
+  .meta-date {
     display: none;
   }
   .post-item.-grid .post-item_text h1,
@@ -8942,6 +8947,13 @@ body.admin-bar #header._fixed {
   .post-item.-grid:hover .post-item_thumb img {
     height: 105%;
   }
+  .post-item.-grid .post-item_thumb {
+    width: 30%;
+    float: left;
+    position: absolute;
+    height: 100%;
+    overflow: hidden;
+  }
   .post-item.-grid .post-item_thumb img {
     width: 100%;
     height: 100%;
@@ -8952,6 +8964,10 @@ body.admin-bar #header._fixed {
     -webkit-transition: 0.5s all ease;
     -o-transition: 0.5s all ease;
     transition: 0.5s all ease;
+  }
+  .post-item.-grid .post-item_text {
+    float: right;
+    width: calc(70% - 10px);
   }
   .post-item.-grid .post-item_text h1 {
     font-size: 16px;
